Updated artifacts for logging in molecule/eos_cli_config_gen

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
@@ -4,6 +4,7 @@ logging:
   buffered:
     size: 1000000
     level: warnings
+  repeat_messages: false
   trap: disabled
   synchronous:
     level:
@@ -67,6 +68,10 @@ logging:
             - 100
             - 200
   event:
+    congestion_drops:
+      interval: 10
+    link_status:
+      global: true
     storm_control:
       discards:
         global: true
