--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/logging.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/logging.cfg
@@ -1,7 +1,10 @@
 !
+no logging repeat-messages
 logging buffered 1000000 warnings
 no logging trap
 logging console errors
+logging event congestion-drops interval 10
+logging event link-status global
 logging event storm-control discards global
 logging event storm-control discards interval 10
 logging synchronous level critical
