--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-ipv6-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-ipv6-2.cfg
@@ -120,6 +120,7 @@ interface Ethernet26
    no shutdown
    switchport access vlan 106
    switchport mode access
+   switchport
    channel-group 26 mode active
 !
 interface Ethernet27
@@ -127,6 +128,7 @@ interface Ethernet27
    no shutdown
    switchport access vlan 107
    switchport mode access
+   switchport
    channel-group 27 mode active
 !
 interface Loopback0
