--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent.yml
@@ -86,6 +86,7 @@ ethernet_interfaces:
     id: 21
     mode: active
   switchport:
+    enabled: true
     mode: access
     access_vlan: 101
 - name: Ethernet22
@@ -98,6 +99,7 @@ ethernet_interfaces:
     id: 22
     mode: active
   switchport:
+    enabled: true
     mode: access
     access_vlan: 102
 - name: Ethernet23
@@ -119,6 +121,7 @@ ethernet_interfaces:
     id: 101
     mode: active
   switchport:
+    enabled: true
     mode: access
     access_vlan: 101
 - name: Ethernet102
@@ -131,6 +134,7 @@ ethernet_interfaces:
     id: 101
     mode: active
   switchport:
+    enabled: true
     mode: access
     access_vlan: 101
 port_channel_interfaces:
