--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-mlag-b.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-mlag-b.cfg
@@ -60,6 +60,7 @@ interface Ethernet11
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet12
@@ -67,6 +68,7 @@ interface Ethernet12
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet13
@@ -74,6 +76,7 @@ interface Ethernet13
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet14
@@ -81,6 +84,7 @@ interface Ethernet14
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet15
@@ -88,6 +92,7 @@ interface Ethernet15
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet16
@@ -95,6 +100,7 @@ interface Ethernet16
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet17
@@ -102,6 +108,7 @@ interface Ethernet17
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet18
@@ -109,6 +116,7 @@ interface Ethernet18
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet19
@@ -116,6 +124,7 @@ interface Ethernet19
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Ethernet20
@@ -123,6 +132,7 @@ interface Ethernet20
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 11 mode active
 !
 interface Vlan101
