--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-dualstack2.cfg
@@ -124,6 +124,7 @@ interface Ethernet24
    no shutdown
    switchport access vlan 104
    switchport mode access
+   switchport
    channel-group 24 mode active
 !
 interface Ethernet25
@@ -131,6 +132,7 @@ interface Ethernet25
    no shutdown
    switchport access vlan 105
    switchport mode access
+   switchport
    channel-group 25 mode active
 !
 interface Loopback0
