--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent.cfg
@@ -69,6 +69,7 @@ interface Ethernet21
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 21 mode active
 !
 interface Ethernet22
@@ -76,6 +77,7 @@ interface Ethernet22
    no shutdown
    switchport access vlan 102
    switchport mode access
+   switchport
    channel-group 22 mode active
 !
 interface Ethernet23
@@ -88,6 +90,7 @@ interface Ethernet101
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 101 mode active
 !
 interface Ethernet102
@@ -95,6 +98,7 @@ interface Ethernet102
    no shutdown
    switchport access vlan 101
    switchport mode access
+   switchport
    channel-group 101 mode active
 !
 interface Loopback0
