--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-ipv6-2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-ipv6-2.yml
@@ -261,6 +261,7 @@ ethernet_interfaces:
     id: 26
     mode: active
   switchport:
+    enabled: true
     mode: access
     access_vlan: 106
 - name: Ethernet27
@@ -273,6 +274,7 @@ ethernet_interfaces:
     id: 27
     mode: active
   switchport:
+    enabled: true
     mode: access
     access_vlan: 107
 mlag_configuration:
