Feat(eos_cli_config_gen): Add support for L3EVPN DCI using DPS

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -128,6 +128,7 @@ redundancy
 roles
 route-maps
 router-adaptive-virtual-topology
+router-adaptive-virtual-topology-2
 router-bfd-1
 router-bfd-2
 router-bgp-base
